[package]
name = "learn_wgpu"
version = "0.1.0"
authors = ["Niklas Korz <niklas@niklaskorz.de>"]
edition = "2018"
description = "WebGPU learning"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["lib", "cdylib"]

[package.metadata.bundle]
name = "learn-wgpu"
identifier = "de.niklaskorz.learn-wgpu"
#icon = ["32x32.png", "128x128.png", "128x128@2x.png"]
version = "1.0.0"
#resources = ["assets", "images/**/*.png", "secrets/public_key.txt"]
copyright = "Copyright (c) Niklas Korz 2020. All rights reserved."
category = "Developer Tool"
short_description = "An example application."
long_description = "An example application."

[dependencies]
image = "0.23"
winit = "0.24"
cgmath = "0.17"
env_logger = "0.7"
log = "0.4"
wgpu = "0.6"
futures = "0.3"
bytemuck = { version = "1.4", features = [ "derive" ] }
anyhow = "1.0"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2.1"
ndk-glue = { version = "0.2.1", features = [ "logger" ] }
android_logger = "0.9.2"

[build-dependencies]
anyhow = "1.0"
fs_extra = "1.1"
glob = "0.3"
shaderc = "0.6"

[package.metadata.android]
apk_label = "learn-wgpu"
target_sdk_version = 29
min_sdk_version = 26
fullscreen = false
launch_mode = "singleTask"
build_targets = ["aarch64-linux-android"]
#build_targets = [ "armv7-linux-androideabi", "aarch64-linux-android", "i686-linux-android", "x86_64-linux-android" ]

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.level"
version = "1"

[[package.metadata.android.feature]]
name = "android.hardware.vulkan.version"
version = "4198400" # v1.1 = 0x00401000
